--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "mocha": "^11.7.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "@solana/spl-token": "^0.4.14"
   }
 }
