--- a/patterns/04-cpi-reentrancy/Anchor.toml
+++ b/patterns/04-cpi-reentrancy/Anchor.toml
@@ -6,8 +6,12 @@ wallet = "~/.config/solana/id.json"
 url = "http://localhost:8899"
 
 [programs.localnet]
-vulnerable_cpi_reentrancy = "VuLnCpIrEeNtRaNcY1111111111111111111111111"
-secure_cpi_reentrancy = "SeCuReCpIrEeNtRaNcY111111111111111111111"
+vulnerable_cpi_reentrancy = "DW5PRzSRWd1oAS8mDiV915GNh1hvpWrs7dxehpdnkD6b"
+secure_cpi_reentrancy = "DmLeYUrsmp4D8PPFYzqoeoVxicmHcDNoFUt3KbJGtQ8K"
+attacker_cpi_reentrancy = "BY2ntBPnsu3LhtA92jHYWUR4RTCm85tC3bNRyZT9Vsu9"
+pinocchio_vulnerable_cpi_reentrancy = "ANpcyVKyc3Vz2U9aPwjLzsHvwzzuimiG5DThsPz6Qgsa"
+pinocchio_secure_cpi_reentrancy = "Du8vRGWEyC5bjXDnjVNHK3JZdHUhmJqu4bbt4tWwrPQD"
+pinocchio_attacker_cpi_reentrancy = "Czak4jHPLpBDrWLjkfPMRaUgYnyVWUuiMsWn3vbqyujM"
 
 [scripts]
 test = "npx ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
