--- a/patterns/05-pda-derivation/tsconfig.json
+++ b/patterns/05-pda-derivation/tsconfig.json
@@ -1,11 +1,14 @@
 {
   "compilerOptions": {
-    "types": ["mocha", "chai"],
-    "typeRoots": ["./node_modules/@types"],
-    "lib": ["es2015"],
+    "target": "ES2020",
     "module": "commonjs",
-    "target": "es6",
     "esModuleInterop": true,
-    "resolveJsonModule": true
-  }
+    "strict": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "outDir": "./dist",
+    "types": ["mocha", "chai", "node"]
+  },
+  "include": ["tests/**/*.ts"],
+  "exclude": ["node_modules"]
 }
